--- a/D-marina-EasyToReserve/Base.lproj/Main.storyboard
+++ b/D-marina-EasyToReserve/Base.lproj/Main.storyboard
@@ -13,18 +13,18 @@
                 <application id="hnw-xV-0zn" sceneMemberID="viewController">
                     <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                         <items>
-                            <menuItem title="Booking Support Tool for D-marina" id="1Xt-HY-uBw">
+                            <menuItem title="Booking Support for D-marina" id="1Xt-HY-uBw">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="Booking Support Tool for D-marina" systemMenu="apple" id="uQy-DD-JDr">
+                                <menu key="submenu" title="Booking Support for D-marina" systemMenu="apple" id="uQy-DD-JDr">
                                     <items>
-                                        <menuItem title="About Booking Support Tool" id="5kV-Vb-QxS">
+                                        <menuItem title="About Booking Support for D-marina" id="5kV-Vb-QxS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
-                                        <menuItem title="Hide About Booking Support Tool" keyEquivalent="h" id="Olw-nP-bQN">
+                                        <menuItem title="Hide Booking Support for D-marina" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
                                             </connections>
@@ -42,7 +42,7 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit About Booking Support Tool" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="Quit Booking Support for D-marina" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                             </connections>
@@ -54,7 +54,7 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                                     <items>
-                                        <menuItem title="About Booking Support Tool Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                                        <menuItem title="Booking Support for D-marina Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                             <connections>
                                                 <action selector="showHelp:" target="Ady-hI-5gd" id="y7X-2Q-9no"/>
                                             </connections>
