Fill the background of available cells for holiday.

--- a/D-marina-EasyToReserve Extension/Resources/StyleSheets/styles.css
+++ b/D-marina-EasyToReserve Extension/Resources/StyleSheets/styles.css
@@ -109,7 +109,7 @@ div.canvas div.canvas-stack > div.boat a:hover {
     color: #bb5520 !important;
 }
 
-div.canvas div.canvas-stack > .selectable {
+div.canvas div.canvas-stack > .canbas-selectable {
 
     cursor: pointer;
 }
