祝日を色付けて表示するようにしました。

--- a/D-marina-EasyToReserve Extension/Resources/StyleSheets/styles.css
+++ b/D-marina-EasyToReserve Extension/Resources/StyleSheets/styles.css
@@ -119,6 +119,11 @@ div.canvas div.canvas-stack > .closing-day {
     background-color: #e7e7eb;
 }
 
+div.canvas div.canvas-stack > .holiday {
+    
+    background-color: #fdeff2;
+}
+
 div.canvas div.canvas-stack > .sunday {
     
     background-color: #fdeff2;
